syntax = "proto3";

option java_package = "com.karmen.grpc";

//service

service controlCenter{
  rpc checkLampStatus( LampRequest) returns (stream LampResponse) {};
  rpc chatWithAgent(stream ChatRequest) returns (stream ChatResponse) {};
}

message LampRequest{
  int32 lampId = 2;
}

message LampResponse{
  string responseMsg = 1;
  int32  responseCode = 2;
}
message ChatRequest{
  string chatMsg = 1;
}
message ChatResponse{
  string responseMsg = 1;
  int32  responseCode = 2;
}